--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -78,19 +78,19 @@
     <div class="med-history">
         <div class="container">
             <div class="row align-items-end">
-                {% for item in med_history %}
+{#                {% for item in med_history %}#}
                 <div class="col-12 col-lg-6">
-                    <h2>{{ item.title }}</h2>
-
-                    <p>{{ item.description }} </p>
-
+{#                    <h2>{{ item.title }}</h2>#}
+                     <h2>MedArt History</h2>
+{#                    <p>{{ item.description }} </p>#}
+                    <p>Lorem ipsum</p>
                     <a class="d-inline-block button gradient-bg" href="#">Read More</a>
                 </div>
 
                 <div class="col-12 col-lg-6 mt-5 mt-lg-0">
                     <img class="responsive" src="{{ item.image.url }}" alt="">
                 </div>
-                {% endfor %}
+{#                {% endfor %}#}
             </div>
         </div>
     </div>
