--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -78,19 +78,25 @@
     <div class="med-history">
         <div class="container">
             <div class="row align-items-end">
-{#                {% for item in med_history %}#}
+                {% for item in med_history %}
                 <div class="col-12 col-lg-6">
 {#                    <h2>{{ item.title }}</h2>#}
                      <h2>MedArt History</h2>
 {#                    <p>{{ item.description }} </p>#}
-                    <p>Lorem ipsum</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris
+                        scelerisque, at rutrum nulla dictum. Ut ac ligula sapien. Suspendisse cursus faucibus finibus.
+                        Curabitur ut augue finibus, luctus tortor at, ornare erat. Nulla facilisi. Sed est risus,
+                        laoreet et quam non, viverra accumsan leo. Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula
+                        sapien. Suspendisse cursus faucibus finibus. Curabitur ut augue finibus, luctus tortor at,
+                        ornare erat.</p>
                     <a class="d-inline-block button gradient-bg" href="#">Read More</a>
                 </div>
 
                 <div class="col-12 col-lg-6 mt-5 mt-lg-0">
                     <img class="responsive" src="{{ item.image.url }}" alt="">
                 </div>
-{#                {% endfor %}#}
+                {% endfor %}
             </div>
         </div>
     </div>
