Cypress errors removed

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -94,7 +94,7 @@
                 </div>
 
                 <div class="col-12 col-lg-6 mt-5 mt-lg-0">
-                    <img class="responsive" src="{{ item.image.url }}" alt="">
+                    <img class="responsive" src="{% static '/images/about.jpg' %}" alt="">
                 </div>
                 {% endfor %}
             </div>
