git ignore updated

--- a/home/templates/home/elements.html
+++ b/home/templates/home/elements.html
@@ -175,7 +175,7 @@
 
                                 <div class="d-flex justify-content-center align-items-baseline">
                                     <div class="start-counter" data-to="23" data-speed="2000"></div>
-                                    <div class="counter-k">k</div>
+                                    <div class="counter-k"></div>
                                 </div>
 
                                 <h3 class="entry-title">Patients</h3><!-- entry-title -->
